syntax= "proto3";

package pb;

option go_package = "./pkg/pb";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse){}
    rpc RegisterOtpVerify (OtpVerifyRequest) returns (OtpVerifyResponse){}
    rpc Login (LoginRequest) returns (LoginResponse){}
    rpc Validate (ValidateRequest) returns (ValidateResponse){}
    rpc AdminRegister (RegisterRequest) returns (OtpVerifyResponse){}
    rpc AdminLogin (LoginRequest) returns (LoginResponse){}
    rpc AddUserAddress (AddUserAddressRequest) returns (AddUserAddressResponse){}
    rpc ShowUserAddress (ShowUserAddressRequest) returns (ShowUserAddressResponse){}
}

//Register

message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone  = 4;
    string password = 5;
    string referalcode=6;
}

message RegisterResponse {
    int64 status = 1;
    string responseid=2;
    string error = 3;
}

message OtpVerifyRequest {
    string Otp=1;
    string OtpId=2;    
}

message OtpVerifyResponse {
    int64 status=1;
    string error=2;
    string response=3;
}
// Login
  
message LoginRequest {
    string email = 1;
    string password = 2;
}
  
message User {
    uint32 id=1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password  = 5;
    string phone = 6;
    bool block = 7;
    bool verified =8;
    string referalcode =9;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    User user=3;
    string token = 4;
}
  
// Validate
  
message ValidateRequest { 
    string token = 1;
}
  
message ValidateResponse {
    int64 status = 1;
    string error = 2;
    int64 userId = 3;
}

message AddUserAddressRequest {
    uint32 userid=1;
     string HouseName=2;
    string Street=3;
      string City=4;
     string State=5;
   string Country=6;
   string Pincode=7;
}

message AddUserAddressResponse {
    int32 status=1;
    string Response=2;
}

message ShowUserAddressRequest {
    uint32 userid=1;
}

message UserAddress {
    uint32   ID=1;
    string HouseName=2;
    string Street=3;
    string City=4;
    string State=5;
    string Country=6;
    string Pincode=7;
}

message ShowUserAddressResponse {
    int32 status=1;
    repeated UserAddress Address=2;
}