syntax= "proto3";

package pb;

option go_package = "./pkg/pb";

service AuthService {
    rpc GetAddress (GetAddressRequest) returns (ShowUserAddressResponse){}
}

message GetAddressRequest {
    uint32 addressid=1;
}

message UserAddress {
    uint32   ID=1;
    string HouseName=2;
    string Street=3;
    string City=4;
    string State=5;
    string Country=6;
    string Pincode=7;
}

message ShowUserAddressResponse {
    int32 status=1;
    repeated UserAddress Address=2;
}